syntax = "proto3";

import "google/protobuf/empty.proto";

package owner;

message RegisterInput {
  string name = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
  string password = 5;
}

message UpdateOwnerInput {
  string id = 1;
  string name = 2;
  string phone = 3;
  string address = 4;
}

message LoginInput {
  string email = 1;
  string password = 2;
}

message Owner {
  string id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
  string phone = 5;
  string createdAt = 6;
  string updatedAt = 7;
  bool active = 8;
}

message GetOwneRequest {
  string id = 1;
}

service OwnerService {
  rpc Register(RegisterInput) returns (Owner);
  rpc Login(LoginInput) returns (Owner);
  rpc GetOwner(GetOwneRequest) returns (Owner);
  rpc UpdateOwner(UpdateOwnerInput) returns (Owner);
}
